<resources>
    <string name="app_name">Restaurantes</string>
    <string name="default_web_client_id">828106103309-p55gi5cmfnho1pc5kd2gl1fpthvrju42.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefs_File">com.example.Restaurantes.PREFERENCE_FILE_KEY</string>
    <string name="Btn_config">Botón de configuración</string>
    <string name="agregar_oferta">Agregar oferta</string>
    <string name="editar_la_oferta_selecionada">Editar la oferta selecionada</string>
    <string name="button">Button</string>
    <string name="cerrar">Cerrar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="btn_editar_imagen">Editar imagen</string>
    <string name="nombre">Nombre:</string>
    <string name="descripci_n">Descripción:</string>
</resources>