<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ModificarPerfilFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgUsr"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_color="#FF8A65"
            app:riv_border_width="3dp"
            app:riv_corner_radius="15dp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btnEditarImagen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:src="@drawable/baseline_edit_24"
            android:scaleType="centerInside"
            android:contentDescription="@string/btn_editar_imagen"
            app:layout_constraintBottom_toBottomOf="@+id/imgUsr"
            app:layout_constraintEnd_toEndOf="@+id/imgUsr"
            app:tint="@color/orange" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgUsr">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre:"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/estilo_borde_texto"
                android:hint="Nombre"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Correo:"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
            <TextView
                android:id="@+id/editCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Correo"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@drawable/estilo_borde_texto"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha Nacimiento:"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
            <EditText
                android:id="@+id/mostrarFechaNac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Fecha nacimiento"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@drawable/estilo_borde_texto"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/guardar"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/cancelar"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>